k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  # How many pods will be created
  replicas: 3
  selector:
    matchLabels:
      component: web
  # Pods will be created by config below
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: frontend
          # Containers image repo from docker-hub
          image: ae1663830a/multi-frontend
          ports:
            - containerPort: 3000
