k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  # How many pods will be created
  replicas: 1
  selector:
    matchLabels:
      component: postgresSQL
  # Pods will be created by config below
  template:
    metadata:
      labels:
        component: postgresSQL
    spec:
      # Assigning persistent volume
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          # Containers image repo from docker-hub
          image: ae1663830a/multi-postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            # Location where postgres stores data
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              # Choose the volume from volumes part ^
              name: postgres-storage
