k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  # values can be NodePort, ClusterIP, Ingress
  # ClusterIP - only components from same cluster can reach
  type: ClusterIP
  selector:
    component: server
  ports:
    # Port to use inside the cluster
    - port: 5000
      # Actual port in pod (container) in web component
      targetPort: 5000
      protocol: TCP
