k8s/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  # Only components from same cluster can reach
  type: ClusterIP
  selector:
    component: web
  ports:
    # Port to use inside the cluster
    - port: 3000
      # Actual port in pod (container) in web component
      targetPort: 3000
      protocol: tcp
