k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  # values can be NodePort, ClusterIP, Ingress
  # ClusterIP - only components from same cluster can reach
  type: ClusterIP
  selector:
    component: postgresSQL
  ports:
    # Port to use inside the cluster
    - port: 5432
      # Actual port in pod (container) in postgres component
      targetPort: 5432
      protocol: TCP
