k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  # values can be NodePort, ClusterIP, Ingress
  # ClusterIP - only components from same cluster can reach
  type: ClusterIP
  selector:
    component: memory-cache
  ports:
    # Port to use inside the cluster
    - port: 6379
      # Actual port in pod (container) in redis component
      targetPort: 6379
