k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Declares class of ingress
    kubernetes.io/ingress.class: nginx
    # rewrites requests paths to '/' (paths defined below)
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # proxy rules
  rules:
    # For http traffic
    - http:
        paths:
          # If receives request to '/', sends it to frontend service
          - path: /
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 3000
          # If receives request to '/api/', sends it to backend service
          - path: /api/
            backend:
              serviceName: backend-cluster-ip-service
              servicePort: 5000
